semantic/src/test_cases/bad/test22.cl
(* Redefine existing classes *)

class A {
    a : Int;
};

class A {
    a : Int;
};

class B {
    b : Int;
};

class B {
    a : String;
};

class Object {
    a : Int;
};

class IO {
    a : Int;
};

class Int {
    a : Int;
};

class String {
    a : Int;
};

class Bool {
    a : Int;
};

class Main {
    main() : Int {
        0
    };
};

class Main {
    a : Int;
    main() : Int {
        0
    };
};
